Update output IDs and improve logic for displaying stable percentages in Ruma monitoring

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -17,7 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWMDZr2F7Hrd",
-        "outputId": "a4e6bf69-beb5-477d-93f0-848e975a2268"
+        "outputId": "70f40548-8389-430f-90da-c329ccb98f32"
       },
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJYWdoMT7iEM",
-        "outputId": "62226066-f141-43b5-9a4c-9f7d064bb66c"
+        "outputId": "82f4e561-17df-49e8-ddf4-04876f3c3e42"
       },
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvmE9UsQ7hxl",
-        "outputId": "ad9e71d6-6750-453e-8809-a2719d4b4d38"
+        "outputId": "692cab7a-2695-4208-bde1-75c04cc46d17"
       },
       "outputs": [],
       "source": [
@@ -439,64 +439,28 @@
         "                            cv2.fillPoly(overlay, [mask.astype(np.int32)], self.RUMA_COLOR)\n",
         "                            frame = cv2.addWeighted(overlay, 0.3, frame, 0.7, 0)\n",
         "\n",
-        "                            # Lógica mejorada para mostrar porcentaje\n",
-        "\n",
+        "                            # --------  Lógica mejorada para mostrar porcentaje --------- #\n",
         "                            is_interacting = closest_ruma_id in rumas_interacting\n",
-        "\n",
         "                            if is_interacting:\n",
-        "                              ruma.frames_without_interaction = 0\n",
+        "                                ruma.frames_without_interaction = 0\n",
+        "                                ruma.last_stable_percentage = ruma.percentage  # Reiniciar al interactuar\n",
         "                            else:\n",
-        "                              ruma.frames_without_interaction += 1\n",
+        "                                ruma.frames_without_interaction += 1\n",
+        "                                # Mientras no se llega a 30 frames, guarda el mayor porcentaje\n",
+        "                                if ruma.frames_without_interaction < 15: #30\n",
+        "                                    ruma.last_stable_percentage = max(ruma.last_stable_percentage, ruma.percentage)\n",
         "\n",
+        "                            # Limita todo a máximo 100%\n",
+        "                            ruma.percentage = min(ruma.percentage, 100)\n",
+        "                            ruma.last_stable_percentage = min(ruma.last_stable_percentage, 100)\n",
+        "\n",
+        "                            # Decide qué mostrar\n",
         "                            if ruma.frames_without_interaction >= 30:\n",
-        "                              display_percentage = ruma.last_stable_percentage\n",
-        "                            else:\n",
-        "                              ruma.last_stable_percentage = ruma.percentage\n",
-        "                              display_percentage= ruma.percentage\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "                            \"\"\"\n",
-        "                            if is_interacting:\n",
-        "                                ruma.frames_without_interaction = 0\n",
-        "                            else:\n",
-        "                                ruma.frames_without_interaction += 1\n",
-        "\n",
-        "                                # Si no hay interacción por 30 frames, actualizar porcentaje estable\n",
-        "                                if ruma.frames_without_interaction >= 30:\n",
-        "                                    ruma.last_stable_percentage = ruma.percentage\n",
-        "\n",
-        "\n",
-        "                            # Mostrar porcentaje\n",
-        "                            if is_interacting:\n",
         "                                display_percentage = ruma.last_stable_percentage\n",
         "                            else:\n",
         "                                display_percentage = ruma.percentage\n",
-        "                                ruma.last_stable_percentage = ruma.percentage\n",
-        "                            \"\"\"\n",
-        "                            \"\"\"\n",
-        "                            #-------------------#\n",
-        "                            # Lógica mejorada para mostrar porcentaje\n",
-        "                            is_interacting = closest_ruma_id in rumas_interacting\n",
         "\n",
-        "                            if is_interacting is not None:\n",
-        "                                ruma.frames_without_interaction = 0\n",
-        "                                # Cuando HAY interacción, mantener el último porcentaje estable\n",
-        "                                display_percentage = ruma.last_stable_percentage\n",
-        "                            else:\n",
-        "                                ruma.frames_without_interaction += 1\n",
-        "\n",
-        "                                # Si no hay interacción por 30 frames, actualizar porcentaje estable\n",
-        "                                if ruma.frames_without_interaction >= 30:\n",
-        "                                    ruma.last_stable_percentage = ruma.percentage\n",
-        "\n",
-        "                                # Cuando NO hay interacción, actualizar el porcentaje normalmente\n",
-        "                                display_percentage = ruma.percentage\n",
-        "                                ruma.last_stable_percentage = ruma.percentage ## prueba\n",
-        "                              \"\"\"\n",
-        "\n",
-        "                            #---------------#\n",
+        "                            #--------                                          -------#\n",
         "\n",
         "                            # Detectar variación significativa\n",
         "                            if display_percentage < 95:\n",
@@ -714,7 +678,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LTLU6_cp_mf",
-        "outputId": "7d2e4509-b92a-4d59-b4ec-dc5809b49008"
+        "outputId": "7d8035af-cd77-4507-c3da-cb54a667677c"
       },
       "outputs": [],
       "source": [
