Update output IDs and enhance logic for stable percentage display in Ruma monitoring

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -17,7 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWMDZr2F7Hrd",
-        "outputId": "70f40548-8389-430f-90da-c329ccb98f32"
+        "outputId": "da236812-b54f-4e43-b501-c3783451b306"
       },
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJYWdoMT7iEM",
-        "outputId": "82f4e561-17df-49e8-ddf4-04876f3c3e42"
+        "outputId": "aa6852e5-a2ef-4291-8eb8-0d3e7687a7d6"
       },
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvmE9UsQ7hxl",
-        "outputId": "692cab7a-2695-4208-bde1-75c04cc46d17"
+        "outputId": "02dc65a0-dbfd-4483-f387-b027134bd724"
       },
       "outputs": [],
       "source": [
@@ -211,6 +211,7 @@
         "            self.frames_without_interaction = 0\n",
         "            self.last_stable_percentage = 100.0\n",
         "            self.label_position = (centroid[0] - 30, centroid[1] - 10)  # Posición fija del label\n",
+        "            self.last_interaction_frame = 0 # prueba, es para interacción\n",
         "\n",
         "    def is_point_in_polygon(self, point, polygon):\n",
         "        \"\"\"Verifica si un punto está dentro de un polígono usando el algoritmo de Ray Casting\"\"\"\n",
@@ -266,7 +267,7 @@
         "\n",
         "        return overlay\n",
         "\n",
-        "    def find_closest_ruma(self, centroid, max_distance=50): # max_distance=100\n",
+        "    def find_closest_ruma(self, centroid, max_distance=60): # max_distance=100\n",
         "        \"\"\"Encuentra la ruma más cercana a un centroide dado\"\"\"\n",
         "        min_distance = float('inf')\n",
         "        closest_ruma = None\n",
@@ -441,13 +442,14 @@
         "\n",
         "                            # --------  Lógica mejorada para mostrar porcentaje --------- #\n",
         "                            is_interacting = closest_ruma_id in rumas_interacting\n",
+        "\n",
         "                            if is_interacting:\n",
         "                                ruma.frames_without_interaction = 0\n",
         "                                ruma.last_stable_percentage = ruma.percentage  # Reiniciar al interactuar\n",
         "                            else:\n",
         "                                ruma.frames_without_interaction += 1\n",
         "                                # Mientras no se llega a 30 frames, guarda el mayor porcentaje\n",
-        "                                if ruma.frames_without_interaction < 15: #30\n",
+        "                                if ruma.frames_without_interaction < 30: #30\n",
         "                                    ruma.last_stable_percentage = max(ruma.last_stable_percentage, ruma.percentage)\n",
         "\n",
         "                            # Limita todo a máximo 100%\n",
@@ -458,13 +460,15 @@
         "                            if ruma.frames_without_interaction >= 30:\n",
         "                                display_percentage = ruma.last_stable_percentage\n",
         "                            else:\n",
-        "                                display_percentage = ruma.percentage\n",
+        "                              if ruma.frames_without_interaction % 29 ==0 and  ruma.frames_without_interaction < 31:\n",
+        "                                ruma_variation = True\n",
+        "                              display_percentage = ruma.last_stable_percentage\n",
         "\n",
         "                            #--------                                          -------#\n",
         "\n",
         "                            # Detectar variación significativa\n",
-        "                            if display_percentage < 95:\n",
-        "                                ruma_variation = True\n",
+        "                            #if display_percentage < 95:\n",
+        "                             #   ruma_variation = True\n",
         "\n",
         "                            # Mostrar ID y porcentaje usando posición fija del label\n",
         "                            label_text = f\"R{ruma.id} | {display_percentage:.1f}%\"\n",
@@ -678,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LTLU6_cp_mf",
-        "outputId": "7d8035af-cd77-4507-c3da-cb54a667677c"
+        "outputId": "712c30df-e9f3-4497-abe8-406725003be1"
       },
       "outputs": [],
       "source": [
@@ -720,8 +724,7 @@
     "colab": {
       "collapsed_sections": [
         "BQyC0cTwSiCv",
-        "YKk1uNh9Tiwl",
-        "EmaW4xgxS0OT"
+        "YKk1uNh9Tiwl"
       ],
       "gpuType": "T4",
       "provenance": []
@@ -731,7 +734,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
