Refactor RumaMonitor class for improved clarity and efficiency

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -17,7 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWMDZr2F7Hrd",
-        "outputId": "da236812-b54f-4e43-b501-c3783451b306"
+        "outputId": "dbb18563-506d-4350-f5ad-f2d34e946042"
       },
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJYWdoMT7iEM",
-        "outputId": "aa6852e5-a2ef-4291-8eb8-0d3e7687a7d6"
+        "outputId": "bea2c936-8ca4-4e8f-f1bf-e6b477a71a97"
       },
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvmE9UsQ7hxl",
-        "outputId": "02dc65a0-dbfd-4483-f387-b027134bd724"
+        "outputId": "73afce32-c700-4651-9e69-0b789ceccf85"
       },
       "outputs": [],
       "source": [
@@ -412,6 +412,7 @@
         "        \"\"\"Procesa la segmentación de rumas\"\"\"\n",
         "        result_seg = self.model_seg(frame, conf=0.5, verbose=False)\n",
         "        ruma_variation = False\n",
+        "        display_percentage = None\n",
         "\n",
         "        if result_seg and len(result_seg) > 0:\n",
         "            for r in result_seg:\n",
@@ -442,40 +443,42 @@
         "\n",
         "                            # --------  Lógica mejorada para mostrar porcentaje --------- #\n",
         "                            is_interacting = closest_ruma_id in rumas_interacting\n",
+        "                            max_frames_without_interaction = 30\n",
         "\n",
         "                            if is_interacting:\n",
         "                                ruma.frames_without_interaction = 0\n",
         "                                ruma.last_stable_percentage = ruma.percentage  # Reiniciar al interactuar\n",
+        "                                ruma_variation = False\n",
         "                            else:\n",
         "                                ruma.frames_without_interaction += 1\n",
-        "                                # Mientras no se llega a 30 frames, guarda el mayor porcentaje\n",
-        "                                if ruma.frames_without_interaction < 30: #30\n",
+        "\n",
+        "                                if ruma.frames_without_interaction < max_frames_without_interaction:\n",
+        "                                    # Guardar el mayor porcentaje mientras no se alcanza el umbral\n",
         "                                    ruma.last_stable_percentage = max(ruma.last_stable_percentage, ruma.percentage)\n",
         "\n",
-        "                            # Limita todo a máximo 100%\n",
+        "                                # Detectar el momento justo cuando se alcanza el límite\n",
+        "                                ruma_variation = (ruma.frames_without_interaction == max_frames_without_interaction)\n",
+        "\n",
+        "                            # Asegurar límites\n",
         "                            ruma.percentage = min(ruma.percentage, 100)\n",
         "                            ruma.last_stable_percentage = min(ruma.last_stable_percentage, 100)\n",
         "\n",
-        "                            # Decide qué mostrar\n",
-        "                            if ruma.frames_without_interaction >= 30:\n",
+        "                            # Decidir qué mostrar\n",
+        "                            if ruma.frames_without_interaction >= max_frames_without_interaction:\n",
         "                                display_percentage = ruma.last_stable_percentage\n",
         "                            else:\n",
-        "                              if ruma.frames_without_interaction % 29 ==0 and  ruma.frames_without_interaction < 31:\n",
-        "                                ruma_variation = True\n",
-        "                              display_percentage = ruma.last_stable_percentage\n",
+        "                                display_percentage = ruma.last_stable_percentage\n",
+        "\n",
+        "                            #display_percentage = ruma.last_stable_percentage\n",
         "\n",
         "                            #--------                                          -------#\n",
-        "\n",
-        "                            # Detectar variación significativa\n",
-        "                            #if display_percentage < 95:\n",
-        "                             #   ruma_variation = True\n",
-        "\n",
         "                            # Mostrar ID y porcentaje usando posición fija del label\n",
-        "                            label_text = f\"R{ruma.id} | {display_percentage:.1f}%\"\n",
-        "                            frame = self.put_text_with_background(\n",
-        "                                frame, label_text, ruma.label_position,  # ← Usar posición fija\n",
-        "                                font_scale=0.6, color=self.TEXT_COLOR_WHITE\n",
-        "                            )\n",
+        "                            if display_percentage is not None:\n",
+        "                              label_text = f\"R{ruma.id} | {display_percentage:.1f}%\"\n",
+        "                              frame = self.put_text_with_background(\n",
+        "                                  frame, label_text, ruma.label_position,  # ← Usar posición fija\n",
+        "                                  font_scale=0.6, color=self.TEXT_COLOR_WHITE\n",
+        "                              )\n",
         "\n",
         "                        else:\n",
         "                            # Posible nueva ruma - agregar como candidata\n",
@@ -682,7 +685,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LTLU6_cp_mf",
-        "outputId": "712c30df-e9f3-4497-abe8-406725003be1"
+        "outputId": "a6d85e46-2da7-4148-d098-7812ab81929a"
       },
       "outputs": [],
       "source": [
@@ -691,7 +694,7 @@
         "    video_path = 'video/video_demo_3.mp4'\n",
         "    output_path = generar_ruta_salida(video_path)\n",
         "    start_time_sec = 15\n",
-        "    end_time_sec = 50\n",
+        "    end_time_sec = 60\n",
         "\n",
         "    model_det_path = 'models/model_detection.pt'\n",
         "    model_seg_path = 'models/model_segmentation.pt'\n",
