Update | Okay without draw_zone

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -17,7 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWMDZr2F7Hrd",
-        "outputId": "595fb477-b33f-4278-c689-d1bef0e9c1d4"
+        "outputId": "1987bc78-a6db-4a43-facf-a58ce4408265"
       },
       "outputs": [],
       "source": [
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJYWdoMT7iEM",
-        "outputId": "a2a08b88-a436-40ba-943c-0a632de2d741"
+        "outputId": "b6db4636-1d93-40b3-883f-553ae1c5918d"
       },
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PvmE9UsQ7hxl",
-        "outputId": "b5a763b2-61c9-4839-d640-b025804d5bd5"
+        "outputId": "1f89d1c6-f4e3-41f9-a8e3-c97e7e82fa47"
       },
       "outputs": [],
       "source": [
@@ -131,7 +131,8 @@
         "import json\n",
         "from datetime import datetime\n",
         "import os\n",
-        "from collections import defaultdict, deque"
+        "from collections import defaultdict, deque\n",
+        "import base64\n"
       ]
     },
     {
@@ -211,7 +212,8 @@
         "            self.frames_without_interaction = 0\n",
         "            self.last_stable_percentage = 100.0\n",
         "            self.label_position = (centroid[0] - 30, centroid[1] - 10)  # Posición fija del label\n",
-        "            self.was_interacting = False  # <-- ¡Esto es lo que necesitas!\n",
+        "            self.was_interacting = False\n",
+        "            self.enterprise = None\n",
         "\n",
         "    def is_point_in_polygon(self, point, polygon):\n",
         "        \"\"\"Verifica si un punto está dentro de un polígono usando el algoritmo de Ray Casting\"\"\"\n",
@@ -328,6 +330,39 @@
         "        if ruma.percentage <= 10:\n",
         "            ruma.is_active = False\n",
         "            print(f\"Ruma {ruma_id} eliminada (porcentaje: {ruma.percentage:.1f}%)\")\n",
+        "    \"\"\"\n",
+        "    def save_alert(self, alert_type, frame_with_drawings, frame_count, fps):\n",
+        "        #Guarda una alerta en JSON con imagen base64\n",
+        "        timestamp = datetime.now()\n",
+        "\n",
+        "        # Crear carpeta de la fecha si no existe\n",
+        "        date_folder = self.alerts_base_path / timestamp.strftime(\"%Y-%m-%d\")\n",
+        "        date_folder.mkdir(exist_ok=True)\n",
+        "\n",
+        "        # Codificar imagen a base64\n",
+        "        _, buffer = cv2.imencode('.jpg', frame_with_drawings)\n",
+        "        frame_base64 = base64.b64encode(buffer).decode('utf-8')\n",
+        "\n",
+        "        # Construir metadata final\n",
+        "        alert_data = {\n",
+        "            \"cameraSN\": self.camera_sn,\n",
+        "            \"alert_type\": alert_type,\n",
+        "            \"timestamp\": timestamp.strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+        "            \"frame\": frame_base64,\n",
+        "            \"enterprise\": \"Alma\" #self.enterprise  #\n",
+        "        }\n",
+        "\n",
+        "        # Nombre del archivo (por ejemplo para auditoría local)\n",
+        "        base_filename = f\"{timestamp.strftime('%H-%M-%S')}_{alert_type}_{frame_count}\"\n",
+        "        json_filename = f\"{base_filename}.json\"\n",
+        "\n",
+        "        # Guardar JSON\n",
+        "        json_path = date_folder / json_filename\n",
+        "        with open(json_path, 'w') as f:\n",
+        "            json.dump(alert_data, f, indent=2)\n",
+        "\n",
+        "        print(f\"Alerta guardada: {alert_type} - {timestamp.strftime('%H:%M:%S')}\")\n",
+        "    \"\"\"\n",
         "\n",
         "    def save_alert(self, alert_type, frame_with_drawings, frame_count, fps):\n",
         "        \"\"\"Guarda una alerta en JSON y el frame correspondiente\"\"\"\n",
@@ -413,6 +448,7 @@
         "        result_seg = self.model_seg(frame, conf=0.5, verbose=False)\n",
         "        ruma_variation = False\n",
         "        object_interacting = False  # Initialize object_interacting\n",
+        "        object_interaction_ended = False # ultimo frame\n",
         "        max_frames_without_interaction = 15\n",
         "\n",
         "        if result_seg and len(result_seg) > 0:\n",
@@ -446,6 +482,11 @@
         "                            # 1. Detectar interacción actual\n",
         "                            is_interacting = closest_ruma_id in rumas_interacting\n",
         "                            #print(\"is_interacting =\", is_interacting, \"type:\", type(is_interacting))\n",
+        "\n",
+        "                            # Detectar fin de interacción (flanco de bajada)\n",
+        "\n",
+        "                            if ruma.was_interacting and not is_interacting:\n",
+        "                              object_interaction_ended = True\n",
         "\n",
         "\n",
         "                            if is_interacting and not ruma.was_interacting:\n",
@@ -503,6 +544,7 @@
         "        for key in to_remove:\n",
         "            del self.candidate_rumas[key]\n",
         "\n",
+        "        ruma_variation=object_interaction_ended ## tomar screen ultima parte\n",
         "        return frame, ruma_variation, object_interacting\n",
         "\n",
         "    def draw_zone_and_status(self, frame, object_in_zone, object_interacting, ruma_variation):\n",
@@ -695,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LTLU6_cp_mf",
-        "outputId": "7f4e0b7b-047d-404c-9043-9d2b26c64ba4"
+        "outputId": "829b7737-3ad0-4e75-fe5a-e240ff7009b2"
       },
       "outputs": [],
       "source": [
@@ -721,6 +763,15 @@
         "        model_det_path, model_seg_path, detection_zone, camera_number\n",
         "    )\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iMPS6rAu8wZf"
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -728,7 +779,6 @@
     "colab": {
       "collapsed_sections": [
         "BQyC0cTwSiCv",
-        "YKk1uNh9Tiwl",
         "EmaW4xgxS0OT"
       ],
       "gpuType": "T4",
